project(CROSS_COMPILE_MESA)

cmake_minimum_required(VERSION 2.6.0)


message("STATUS TARGET SYSTEM NAME ${CMAKE_SYSTEM_NAME}")
message("STATUS TARGET SYSTEM VERSION ${CMAKE_SYSTEM_VERSION}")
message("STATUS TARGET SYSTEM PROCESSOR ${CMAKE_SYSTEM_PROCESSOR}")
message("STATUS CMAKE_C_COMPILER: ${CMAKE_C_COMPILER}")
message("STATUS CMAKE_CXX_COMPILER: ${CMAKE_CXX_COMPILER}")

add_subdirectory(src bin)
